--- a/n8n-docker/docker-compose.yml
+++ b/n8n-docker/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - TZ=America/Argentina/Buenos_Aires
       - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=admin123
+      - N8N_BASIC_AUTH_USER=N8NSuperAdminUser
+      - N8N_BASIC_AUTH_PASSWORD=MegaSecretPassword1*
     volumes:
       - ./n8n_data:/home/node/.n8n
